--- a/templates/concert/index.html.twig
+++ b/templates/concert/index.html.twig
@@ -13,6 +13,12 @@
         height: 50vh;
         border: solid black 2px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        transition: 500ms;
+    }
+    .carte:hover {
+        box-shadow: 10px 10px 0px 0px #3FFFBA,10px 10px 0px 2.5px black;
+        transform: translateX(-10px);
+        transition: 500ms;
     }
     .carte button{
         margin: 10px 0;
@@ -27,22 +33,154 @@
         background-color: #343434;
         color: #fff;
     }
+    .carte .texte{
+        margin-left: 18px;
+    }
     .img {
         background-color: grey;
+        background-image: url("{{ asset('Image/gospel.jpeg') }}");
+        background-size: cover;
         margin: auto;
-        width: 90%;
-        height: 65%;
+        width: 94%;
+        height: 68%;
+    }
+    #manifs {
+        margin: auto;
+        width: 80vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    #titre {
+        margin: auto;
+        display: flex;
+        height: 10vh;
+        width: 30vw;
+        text-align: center;
+        border-bottom: black solid 2px;
+    }
+    #titre h2{
+        margin: auto;
+    }
+    #concert {
+        background-color: #3FFFBA;
+        padding: 23px;
+    }
+    #concert a{
+        color: #fff;
     }
 </style>
-
-<div class="carte">
-    <div class="img">
-
+    <div id="titre">
+        <h2>Concerts</h2>
     </div>
-    <h4>AIMÉE – LA TOURNÉE</h4>
-    <p>artiste</p>
-    <p>artiste</p>
-    <p>artiste</p>
-    <button>Réserver</button>
+<div id="manifs">
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
+    <div class="carte">
+        <div class="img">
+
+        </div>
+        <div class="texte">
+            <h4>AIMÉE – LA TOURNÉE</h4>
+            <p>artiste</p>
+            <p>artiste</p>
+            <p>artiste</p>
+        </div>
+        <button>Réserver</button>
+    </div>
 </div>
 {% endblock %}
