--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -196,7 +196,7 @@
     {% endif %}
 
     {% if app.user %}
-        <div><a href="logout"><button class="btn btn-secondary">Déconnexion</button></a></div>
+        <div><a href="logout">Déconnexion</a></div>
     {% else %}
         <div id="border"><a href="login"><i class="fa-solid fa-circle-user"></i>   Connexion / </a>
             <a href="register">Inscription</a></div>
