--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,7 +17,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
         <div>
             <label for="inputEmail">Email</label>
-            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" placeholder="sucemaqueue@gmail.com" autofocus>
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" placeholder="name@gserver.com" autofocus>
         </div>
         <div>
             <label for="inputPassword">Mot de passe</label>
