--- a/templates/theatre/index.html.twig
+++ b/templates/theatre/index.html.twig
@@ -39,7 +39,7 @@
                 <p>artiste</p>
                 <p>artiste</p>
             </div>
-            <button>Réserver</button>
+            <button onclick="window.location.href = 'panier';">Réserver</button>
         </div>
         <div class="carte">
             <div class="img">
