--- a/templates/theatre/index.html.twig
+++ b/templates/theatre/index.html.twig
@@ -11,12 +11,16 @@
         }
         .img {
             background-color: grey;
-            background-image: url("{{ asset('Image/{{ Manifs.affiche }}') }}");
             background-size: cover;
             margin: auto;
             width: 94%;
             height: 65%;
             margin-top: 8px;
+            overflow: hidden;
+        }
+        .img img{
+            width: 100%;
+
         }
         #theatre {
             background-color: #9747FF;
@@ -33,7 +37,7 @@
         {% for Manifs in Manifs %}
         <div class="carte">
             <div class="img">
-
+                <img src=" {{ asset("Image/#{ Manifs.affiche }") }}">
             </div>
             <div class="texte">
                 <h4>{{ Manifs.titre }}</h4>
