--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,12 +3,11 @@
 {% block title %}S'inscrire{% endblock %}
 
 {% block body %}
-    <h1>S'inscrire</h1>
+<div id="flex">
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email, {
-            label: 'Email '
-        }) }}
+        <h1>S'inscrire</h1>
+        {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Mot de passe '
         }) }}
@@ -18,4 +17,5 @@
 
         <button type="submit" class="btn">S'inscrire</button>
     {{ form_end(registrationForm) }}
+</div>
 {% endblock %}
