--- a/templates/theatre/index.html.twig
+++ b/templates/theatre/index.html.twig
@@ -20,7 +20,7 @@
         }
         .img img{
             width: 100%;
-
+            margin: auto;
         }
         #theatre {
             background-color: #9747FF;
