--- a/templates/theatre/index.html.twig
+++ b/templates/theatre/index.html.twig
@@ -45,7 +45,7 @@
                 <p>{{ Manifs.date }}</p>
                 <p>{{ Manifs.prix }} €</p>
             </div>
-            <button onclick="window.location.href = 'panier';">Réserver</button>
+            <button onclick="">Réserver</button>
         </div>
         {% endfor %}
     </div>
