--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -6,17 +6,17 @@
         <i class="fas fa-bars ouvrir"></i>
         <i class="fas fa-times fermer"></i>
     </div>
-    <div class="menu">
-        <div id="concert"><a href="concert">Concert</a></div>
-        <div id="spectacle"><a href="spectacle">Spectacle</a></div>
-        <div id="exposition"><a href="exposition">Exposition</a></div>
-        <div id="theatre"><a href="theatre">Théâtre</a></div>
-    {% if is_granted("ROLE_ADMIN") %}
-        <div><a href="admin"><i class="fa-solid fa-lock"></i></a></div>
-    {% endif %}
+    <div class="menu-container">
+        <div class="search-bar">
+            <img src="{{ asset('Image/assets/search.png') }}" alt="search-icon">
+            <input type="text" placeholder="Rechercher...">
+        </div>
+        <div class="menu">
+            <div id="theatre"><a href="theatre">Théâtre</a></div>
+            {% if is_granted("ROLE_ADMIN") %}
+                <div><a href="admin"><i class="fa-solid fa-lock"></i></a></div>
+            {% endif %}
 
-<<<<<<< HEAD
-<<<<<<< Updated upstream
             {% if app.user %}
                 <div><a href="logout">Déconnexion</a></div>
             {% else %}
@@ -25,24 +25,6 @@
             {% endif %}
             <div><a href="panier"><i class="fa-solid fa-cart-shopping"></i> Panier</a></div>
         </div>
-=======
-    {% if app.user %}
-        <div><a href="logout">Déconnexion</a></div>
-    {% else %}
-        <div id="border"><a href="login"><i class="fa-solid fa-circle-user"></i>   Connexion / </a>
-            <a href="register">Inscription</a></div>
-    {% endif %}
-            <div><a href="panier"><i class="fa-solid fa-cart-shopping"></i> Panier <span id='panier'>0</span></a></div>
->>>>>>> Stashed changes
-=======
-    {% if app.user %}
-        <div><a href="logout">Déconnexion</a></div>
-    {% else %}
-        <div id="border"><a href="login"><i class="fa-solid fa-circle-user"></i>   Connexion / </a>
-            <a href="register">Inscription</a></div>
-    {% endif %}
-            <div><a href="panier"><i class="fa-solid fa-cart-shopping"></i> Panier</a></div>
->>>>>>> parent of 7bc1d97 (update navbar + panier style)
     </div>
 </nav>
 <script>
