--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,18 @@ nav {
   border-bottom: solid black 3px;
 }
 
+table {
+  width: 50%;
+}
+table td {
+  border: 1px solid;
+  text-align: center;
+}
+
+#bas {
+  border: none;
+}
+
 .logo {
   display: flex;
   align-items: center;
@@ -182,43 +194,52 @@ form div {
   width: 100%;
   padding: 10px;
 }
-
+#inputPassword table {
+  width: 50%;
+}
+#inputPassword td {
+  border: 1px solid;
+  text-align: center;
+}
+#inputPassword #bas {
+  border: none;
+}
 @media all and (max-width: 991px) {
-  header {
+  #inputPassword header {
     background: transparent;
   }
-  .toggle {
+  #inputPassword .toggle {
     display: block;
     font-size: 2rem;
     cursor: pointer;
     position: relative;
     z-index: 20;
   }
-  .logo {
+  #inputPassword .logo {
     position: relative;
     z-index: 20;
   }
-  .ouvrir {
+  #inputPassword .ouvrir {
     display: block;
     font-size: 100px;
     margin-right: 30px;
     margin-top: 10px;
   }
-  .fermer {
+  #inputPassword .fermer {
     display: none;
     font-size: 110px;
     margin-right: 30px;
   }
-  .open .ouvrir {
+  #inputPassword .open .ouvrir {
     display: none;
   }
-  .open .fermer {
+  #inputPassword .open .fermer {
     display: block;
   }
-  .open .menu {
+  #inputPassword .open .menu {
     transform: translateX(0);
   }
-  .menu {
+  #inputPassword .menu {
     position: absolute;
     display: flex;
     top: 0;
@@ -232,47 +253,47 @@ form div {
     transform: translateX(-100%);
     transition: transform 1s;
   }
-  .menu div {
+  #inputPassword .menu div {
     display: flex;
     width: 100%;
     height: 5vh;
     text-align: center;
   }
-  .menu #concert:hover {
+  #inputPassword .menu #concert:hover {
     background-color: #3FFFBA;
   }
-  .menu #concert:hover a {
+  #inputPassword .menu #concert:hover a {
     color: #fff;
   }
-  .menu #spectacle:hover {
+  #inputPassword .menu #spectacle:hover {
     background-color: #FF4B3F;
   }
-  .menu #spectacle:hover a {
+  #inputPassword .menu #spectacle:hover a {
     color: #fff;
   }
-  .menu #exposition:hover {
+  #inputPassword .menu #exposition:hover {
     background-color: #FF9B3F;
   }
-  .menu #exposition:hover a {
+  #inputPassword .menu #exposition:hover a {
     color: #fff;
   }
-  .menu #theatre:hover {
+  #inputPassword .menu #theatre:hover {
     background-color: #9747FF;
   }
-  .menu #theatre:hover a {
+  #inputPassword .menu #theatre:hover a {
     color: #fff;
   }
-  .menu #border {
+  #inputPassword .menu #border {
     border-top: #000 solid 6px;
     border-bottom: #000 solid 6px;
   }
-  .menu a {
+  #inputPassword .menu a {
     font-size: 3rem;
     text-decoration: none;
     color: #000;
     margin: auto;
   }
-  .btn {
+  #inputPassword .btn {
     font-size: 2rem;
   }
 }
