--- a/public/styles.scss
+++ b/public/styles.scss
@@ -78,10 +78,12 @@ table {
   }
   .menu {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     list-style: none;
-    width: 100%;
-    height: inherit;
+    padding-left: 30px;
+    width: 40%;
+    height: 48.5px;
     a {
       color: #000;
       text-decoration: none;
