--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PanierController!{% endblock %}
+{% block title %}Panier{% endblock %}
 
 {% block body %}
     <table>
         <thead>
         <tr>
-            <th>article</th>
-            <th>quantite</th>
+            <th>articles</th>
+            <th>quantité</th>
             <th>prix unitaire</th>
             <th>prix total</th>
         </tr>
