--- a/templates/theatre/index.html.twig
+++ b/templates/theatre/index.html.twig
@@ -39,7 +39,7 @@
                 <p>{{ Manifs.date }}</p>
                 <p>{{ Manifs.prix }} €</p>
             </div>
-            <button onclick="">Réserver</button>
+            <button onclick="window.location.href ='theatre/{{ Manifs.id }}';">Réserver</button>
         </div>
         {% endfor %}
     </div>
