--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,7 +12,7 @@
             <input type="text" placeholder="Rechercher...">
         </div>
         <div class="menu">
-            <div id="theatre"><a href="theatre">Théâtre</a></div>
+            <div id="theatre"><a href="manifs">Évènements</a></div>
             {% if is_granted("ROLE_ADMIN") %}
                 <div><a href="admin"><i class="fa-solid fa-lock"></i></a></div>
             {% endif %}
