--- a/public/styles.scss
+++ b/public/styles.scss
@@ -25,7 +25,7 @@ nav {
   display: flex;
   align-items: center;
   border-bottom: solid black 3px;
-}
+  box-shadow: 3px 3px 6px -1px rgba(0, 0, 0, 0.25);}
 table {
   width: 50%;
   td {
@@ -75,6 +75,7 @@ table {
       border: none;
       padding-left: 10px;
     }
+
   }
   .menu {
     display: flex;
@@ -84,10 +85,27 @@ table {
     padding-left: 30px;
     width: 40%;
     height: 48.5px;
-    a {
-      color: #000;
+    .nav-link {
+      display: flex;
+      align-items: center;
+      color: black;
       text-decoration: none;
-      cursor: pointer;
+      height: 100%;
+      padding-left: 20px;
+      padding-right: 20px;
+      i {
+        margin-right: 10px;
+      }
+      span {
+        margin-left: 10px;
+      }
+    }
+    .nav-link:hover {
+      color: white;
+      background-color: black;
+    }
+    .evenement-nav-link:hover {
+      background-color: #9747FF;
     }
   }
 }
