--- a/public/styles.css
+++ b/public/styles.css
@@ -29,6 +29,7 @@ nav {
   display: flex;
   align-items: center;
   border-bottom: solid black 3px;
+  box-shadow: 3px 3px 6px -1px rgba(0, 0, 0, 0.25);
 }
 
 table {
@@ -93,10 +94,27 @@ table td {
   width: 40%;
   height: 48.5px;
 }
-.menu-container .menu a {
-  color: #000;
+.menu-container .menu .nav-link {
+  display: flex;
+  align-items: center;
+  color: black;
   text-decoration: none;
-  cursor: pointer;
+  height: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.menu-container .menu .nav-link i {
+  margin-right: 10px;
+}
+.menu-container .menu .nav-link span {
+  margin-left: 10px;
+}
+.menu-container .menu .nav-link:hover {
+  color: white;
+  background-color: black;
+}
+.menu-container .menu .evenement-nav-link:hover {
+  background-color: #9747FF;
 }
 
 .btn {
