update navbar link

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -12,7 +12,7 @@
             <input type="text" placeholder="Rechercher...">
         </div>
         <div class="menu">
-            <a href="theatre" class="nav-link evenement-nav-link">Théâtre</a>
+            <a href="theatre" class="nav-link evenement-nav-link">Evenements</a>
             {% if is_granted("ROLE_ADMIN") %}
                 <div><a href="admin"><i class="fa-solid fa-lock"></i></a></div>
             {% endif %}
