--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,4 @@
+@import url("fonts/fonts.scss");
 * {
   margin: 0;
   padding: 0;
@@ -102,12 +103,19 @@ table td {
   height: 100%;
   padding-left: 20px;
   padding-right: 20px;
+  font-family: "Oscan Expanded Regular";
+  font-size: 14px;
 }
 .menu-container .menu .nav-link i {
   margin-right: 10px;
 }
 .menu-container .menu .nav-link span {
   margin-left: 10px;
+  padding: 5px;
+  background-color: red;
+  font-size: 7px;
+  color: white;
+  border-radius: 10px;
 }
 .menu-container .menu .nav-link:hover {
   color: white;
