--- a/public/styles.scss
+++ b/public/styles.scss
@@ -1,3 +1,5 @@
+@import url('fonts/fonts.scss');
+
 * {
   margin: 0;
   padding: 0;
@@ -93,11 +95,18 @@ table {
       height: 100%;
       padding-left: 20px;
       padding-right: 20px;
+      font-family: "Oscan Expanded Regular";
+      font-size: 14px;
       i {
         margin-right: 10px;
       }
       span {
         margin-left: 10px;
+        padding: 5px;
+        background-color: red;
+        font-size: 7px;
+        color: white;
+        border-radius: 10px;
       }
     }
     .nav-link:hover {
