--- a/public/fonts/fonts.css
+++ b/public/fonts/fonts.css
@@ -3,19 +3,19 @@
   font-family: "Oscan Expanded Regular";
   font-style: normal;
   font-weight: normal;
-  src: local("Oscan Expanded Regular"), url("Oscanexpanded-1GpLv.woff") format("woff");
+  src: local("Oscan Expanded Regular"), url("Oscan Expanded/Oscanexpanded-1GpLv.woff") format("woff");
 }
 @font-face {
   font-family: "Oscan Expanded Outline";
   font-style: normal;
   font-weight: normal;
-  src: local("Oscan Expanded Outline"), url("OscanExpandedOutline-RpDzE.woff") format("woff");
+  src: local("Oscan Expanded Outline"), url("Oscan Expanded/OscanExpandedOutline-RpDzE.woff") format("woff");
 }
 @font-face {
   font-family: "Oscan Expanded Rounded";
   font-style: normal;
   font-weight: normal;
-  src: local("Oscan Expanded Rounded"), url("OscanExpandedRounded-BW6yw.woff") format("woff");
+  src: local("Oscan Expanded Rounded"), url("Oscan Expanded/OscanExpandedRounded-BW6yw.woff") format("woff");
 }
 
 /*# sourceMappingURL=fonts.css.map */
