--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -1,6 +1,6 @@
-{% extends '../base.html.twig' %}
+{% extends './base.html.twig' %}
 
-{% block title %}Hello AccueilController!{% endblock %}
+{% block title %}Détails{% endblock %}
 
 {% block body %}
     <style>
