--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -24,6 +24,7 @@
         }
 
     </style>
+    <script type="text/javascript" src="{{ asset('scriptgeneral.js') }}"></script>
     <div id="titre">
         <h2>Évènements</h2>
     </div>
