--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -22,7 +22,7 @@
         <hr>
         <form action="finalisation.php" method="post">
             <input type="hidden" name="liste" id="liste">
-            <input type="submit" value="Valider ma commande.">
+            <input type="submit" value="Valider ma commande">
         </form>
         <hr>
 
