--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -11,7 +11,14 @@
     </style>
 
     <div class="example-wrapper">
+        <img src=" {{ asset("Image/#{ Manifs.affiche }") }}">
         <h4>{{ Manifs.titre }}</h4>
+        <h4>{{ Manifs.genre }}</h4>
+        <p>{{ Manifs.heure }}</p>
+        <p>{{ Manifs.date }}</p>
+        <p>{{ Manifs.prix }} €</p>
+        <p>{{ Manifs.description }}</p>
+        <p>{{ Manifs.lieu }}</p>
         <span id="article">vis bois</span> - <span id="prix">4</span>€
         x<input type="number" value="1" min="1" max="99" id="qte">
         <input type="hidden" id="id" value="{{ Manifs.id }}">
