--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
 <div id="flex">
+    <div id="titre-connexion">
+        <h2>Se connecter</h2>
+    </div>
     <form method="post">
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -15,13 +18,10 @@
             </div>
         {% endif %}
         <div id="auto">
-            <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
-            <div>
+            <label for="email">Email</label>
                 <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" placeholder="Email" autofocus>
-            </div>
-            <div>
-                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" placeholder="Mot de Passe">
-            </div>
+            <label for="password">Mot de passe</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" placeholder="Mot de passe">
 
             <input type="hidden" name="_csrf_token"
                    value="{{ csrf_token('authenticate') }}"
@@ -37,11 +37,9 @@
                     </label>
                 </div>
             #}
-            <div>
                 <button class="btn" type="submit">
                     Se connecter
                 </button>
-            </div>
         </div>
     </form>
 </div>
