--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -25,7 +25,7 @@
 
     </style>
     <div id="titre">
-        <h2>Évènements</h2>
+        <h2>Evenements</h2>
     </div>
     <div id="manifs">
         {% for Manifs in Manifs %}
