--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -25,6 +25,5 @@
             <input type="submit" value="Valider ma commande">
         </form>
         <hr>
-
-        <script src="scriptpanier.js"></script>
+        <script type="text/javascript" src="{{ asset('scriptpanier.js') }}"></script>
 {% endblock %}
