--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,4 +20,5 @@
         {% block body %}{% endblock %}
 
     </body>
+    <script type="text/javascript" src="{{ asset('scriptgeneral.js') }}"></script>
 </html>
