--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -3,8 +3,6 @@
 {% block title %}Détails{% endblock %}
 
 {% block body %}
-    <script type="text/javascript" src="{{ asset('scriptgeneral.js') }}"></script>
-    <script type="text/javascript" src="{{ asset('scriptpagearticles.js') }}"></script>
     <style>
         .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
         .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -12,17 +10,17 @@
 
     <div class="example-wrapper">
         <img src=" {{ asset("Image/#{ Manifs.affiche }") }}">
-        <h4>{{ Manifs.titre }}</h4>
+        <h4 id="titre">{{ Manifs.titre }}</h4>
         <h4>{{ Manifs.genre }}</h4>
         <p>{{ Manifs.heure }}</p>
         <p>{{ Manifs.date }}</p>
-        <p>{{ Manifs.prix }} €</p>
+        <div><p id="prix">{{ Manifs.prix }}</p>€
+        x<input type="number" value="1" min="1" max="99" id="qte"></div>
         <p>{{ Manifs.description }}</p>
         <p>{{ Manifs.lieu }}</p>
-        <span id="article">vis bois</span> - <span id="prix">4</span>€
-        x<input type="number" value="1" min="1" max="99" id="qte">
-        <input type="hidden" id="id" value="{{ Manifs.id }}">
+        <p>{{ Manifs.lieu.adresse }}</p><input type="hidden" id="id" value="{{ Manifs.id }}">
         <button id="ajout">ajouter au panier</button>
 
     </div>
+    <script type="text/javascript" src="{{ asset('scriptpagearticles.js') }}"></script>
 {% endblock %}
