update register.html.twig + styles.css

--- a/public/styles.css
+++ b/public/styles.css
@@ -155,6 +155,7 @@ table td {
   text-align: center;
   color: white;
   font-family: "Oscan Expanded Regular";
+  font-size: 24px;
   background-color: #9747FF;
   margin-top: 40px;
 }
@@ -167,6 +168,7 @@ table td {
   align-items: center;
   justify-content: center;
   font-family: "Oscan Expanded Regular";
+  font-size: 24px;
   margin-top: 40px;
   background-color: #343434;
   color: white;
@@ -239,6 +241,27 @@ form #auto {
   padding: 10px;
   height: 50px;
   border: #343434 solid 3px;
+}
+
+form[name=registration_form] {
+  height: 34%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+form[name=registration_form] #form-container {
+  margin-top: 40px;
+}
+form[name=registration_form] #form-container div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 55%;
+}
+form[name=registration_form] #form-container div input {
+  height: 50px;
+  border: #343434 solid 3px;
+  padding: 10px;
 }
 
 table {
