--- a/public/styles.scss
+++ b/public/styles.scss
@@ -148,6 +148,7 @@ table {
   text-align: center;
   color: white;
   font-family: "Oscan Expanded Regular";
+  font-size: 24px;
   background-color: #9747FF;
   margin-top: 40px;
   h2 {
@@ -160,6 +161,7 @@ table {
   align-items: center;
   justify-content: center;
   font-family: "Oscan Expanded Regular";
+  font-size: 24px;
   margin-top: 40px;
   background-color: #343434;
   color: white;
@@ -228,6 +230,27 @@ form {
   padding: 10px;
   height: 50px;
   border: #343434 solid 3px;
+}
+
+form[name="registration_form"] {
+  height: 34%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  #form-container {
+    margin-top: 40px;
+    div {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 55%;
+      input {
+        height: 50px;
+        border: #343434 solid 3px;
+        padding: 10px;
+      }
+    }
+  }
 }
 
 table {
