--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -9,7 +9,7 @@
     </style>
 
     <div class="example-wrapper">
-        <img src=" {{ asset("Image/#{ Manifs.affiche }") }}">
+        <img src=" {{ asset("Image/#{ Manifs.affiche }") }}" id="affiche">
         <h4 id="titre">{{ Manifs.titre }}</h4>
         <h4>{{ Manifs.genre }}</h4>
         <p>{{ Manifs.heure }}</p>
