--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -6,6 +6,7 @@
     <table>
         <thead>
         <tr>
+            <th>Affiche</th>
             <th>articles</th>
             <th>quantité</th>
             <th>prix unitaire</th>
@@ -17,7 +18,7 @@
 
 
         </tbody>
-        <tfoot><tr><td id="bas" colspan="3"></td><td><span id="total">0</span>€</td></tr></tfoot>
+        <tfoot><tr><td id="bas" colspan="4"></td><td><span id="total">0</span>€</td></tr></tfoot>
         <table/>
         <hr>
         <form action="finalisation.php" method="post">
