--- a/public/styles.css
+++ b/public/styles.css
@@ -191,7 +191,10 @@ table td {
   margin-left: 18px;
 }
 .carte h4 {
-  font-family: "Oscan Expanded Regular";
+  text-overflow: ellipsis;
+  width: inherit;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .carte button {
   margin: 10px 0;
