--- a/public/styles.scss
+++ b/public/styles.scss
@@ -183,7 +183,7 @@ table {
   transition: 500ms;
   h4 {
     text-overflow: ellipsis;
-    width: inherit;
+    width: 95%;
     overflow: hidden;
     white-space: nowrap;
   }
