--- a/public/styles.css
+++ b/public/styles.css
@@ -192,7 +192,7 @@ table td {
 }
 .carte h4 {
   text-overflow: ellipsis;
-  width: inherit;
+  width: 95%;
   overflow: hidden;
   white-space: nowrap;
 }
