--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -17,6 +17,7 @@
             height: 65%;
             margin-top: 8px;
             overflow: hidden;
+            margin-bottom: 5px;
         }
         .img img{
             width: 100%;
