--- a/templates/manifs/index.html.twig
+++ b/templates/manifs/index.html.twig
@@ -40,7 +40,7 @@
                     <p>{{ Manifs.date }}</p>
                     <p>{{ Manifs.prix }} €</p>
                 </div>
-                <button onclick="window.location.href ='manifs/{{ Manifs.id }}';">Réserver</button>
+                <button onclick="window.location.href ='manifs/{{ Manifs.id }}';">Voir les détails</button>
             </div>
         {% endfor %}
     </div>
