--- a/templates/manifs/manifsdetails.html.twig
+++ b/templates/manifs/manifsdetails.html.twig
@@ -9,7 +9,7 @@
     </style>
 
     <div id="manif-titre">
-        <h1>{{ Manifs.titre }}</h1>
+        <h1 id="titre">{{ Manifs.titre }}</h1>
         <h2>{{ Manifs.auteur }}</h2>
     </div>
     <img src=" {{ asset("Image/#{ Manifs.affiche }") }}" id="affiche">
