--- a/templates/lieu/index.html.twig
+++ b/templates/lieu/index.html.twig
@@ -37,9 +37,9 @@
                 <div class="texte">
                     <h4>{{ Lieux.lieu }}</h4>
                     <p>{{ Lieux.adresse }}</p>
-                    <p>{{ Lieux.capacite }}</p>
+                    <p> Capacité : {{ Lieux.capacite }}</p>
                 </div>
-                <button onclick="window.location.href ='lieu/{{ Lieux.id }}';">Voir les détails</button>
+                <button onclick="window.location.href ='https://www.google.com/maps/search/listes+de+toutes+les+salles+de+troyes/@48.2766638,4.0819566,14z';">Voir les détails</button>
             </div>
         {% endfor %}
     </div>
