--- a/templates/lieu/index.html.twig
+++ b/templates/lieu/index.html.twig
@@ -20,6 +20,7 @@
             margin-bottom: 5px;
         }
         .img img{
+            height: 100%;
             width: 100%;
             margin: auto;
         }
